[2.0.0-SNAPSHOT] AwsRuntimeInvoker instance -> supplier contract changed